--- a/npactflask/npactflask/static/js/messages/message.html
+++ b/npactflask/npactflask/static/js/messages/message.html
@@ -1,5 +1,4 @@
 <div class="message alert alert-{{message.level}}" >
   <a ng-click="dismiss()" class="close" aria-label="close" title="close">&times;</a>
-  <p id="error-message" class="" ng-bind="message.text">
-  </p>
+  <p id="error-message" class="" ng-bind="message.text"></p>
 </div>
