--- a/npactflask/npactflask/static/js/graphs/printConfirm.html
+++ b/npactflask/npactflask/static/js/graphs/printConfirm.html
@@ -3,6 +3,6 @@
   <p>This takes time roughly linear to the number of rows. Narrowing the range (start and end base) or zooming out by using a larger bases/graph will both lower the time required.</p>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-primary" ng-click="proceed()">Proceed</button>
-  <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+  <button class="btn btn-primary" ng-click="$close()">Proceed</button>
+  <button class="btn btn-warning" ng-click="$dismiss()">Cancel</button>
 </div>
