Remove old jquery-ui classes

--- a/npactflask/npactflask/static/js/graphs/page.html
+++ b/npactflask/npactflask/static/js/graphs/page.html
@@ -32,7 +32,7 @@
           </span>
         </accordion-heading>
         <div id="downloads" ng-controller="DownloadsCtrl as dc">
-          <div class="ui-state-highlight ui-corner-all" >
+          <div class="" >
             <p>
               <a href="#"
                  title="Have the server generate a PDF for printing (this takes a minute)."
