--- a/npactflask/npactflask/static/js/graphs/zoomwindow.html
+++ b/npactflask/npactflask/static/js/graphs/zoomwindow.html
@@ -1,7 +1,7 @@
-<div class="container-fluid">
+<div class="container-fluid zoomwindow">
   <div class="row">
     <div class="col-sm-6"><h2>{{zw.data.name}}</h2></div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 form-inline">
       <input class="form-control" type="number" name="startBase" style="width:6em;"
              min="0" max="{{gc.length}}"
              ng-model="zw.data.start"
@@ -12,6 +12,14 @@
              ng-model="zw.data.end"
              ng-model-options="{ updateOn: 'default blur', debounce: { 'default': 600, 'blur': 0 } }">
 
+    </div>
+    <div class="col-sm-2">
+      <ul class="nav nav-stacked">
+        <li><a href="#" zw-permalink="zw.data">
+            <span class="glyphicon glyphicon-link"></span>Share</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-new-window"></span>nBLAST</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-new-window"></span>pBLAST</a></li>
+      </ul>
     </div>
   </div>
   <div class="row">
@@ -50,4 +58,13 @@
       </div>
     </div>
   </div>
+  <div class="row graph-row">
+    <div class="col-sm-12" style="padding: 20px; border: 1px dotted #333; height:120px;">
+      The graph will go here
+    </div>
+  </div>
+  <div class="row protein-row">
+    <div class="col-sm-1" style="color: #ccc;">outside of gene left</div>
+    <div class="col-sm-10" style="padding: 20px;">The Protein translation here</div>
+    <div class="col-sm-1" style="color: #ccc;">outside of gene right</div>  </div>
 </div>
