--- a/npactflask/npactflask/static/js/graphs/zoomwindow.html
+++ b/npactflask/npactflask/static/js/graphs/zoomwindow.html
@@ -1,70 +1,60 @@
-<div class="container-fluid zoomwindow">
-  <div class="row">
-    <div class="col-sm-6"><h2>{{zw.data.name}}</h2></div>
-    <div class="col-sm-4 form-inline">
-      <input class="form-control" type="number" name="startBase" style="width:6em;"
-             min="0" max="{{gc.length}}"
-             ng-model="zw.data.start"
-             ng-model-options="{ updateOn: 'default blur', debounce: { 'default': 600, 'blur': 0 } }">
-      <span>to</span>
-      <input class="form-control" type="number" name="endBase" style="width:6em;"
-             min="0" max="{{gc.length}}"
-             ng-model="zw.data.end"
-             ng-model-options="{ updateOn: 'default blur', debounce: { 'default': 600, 'blur': 0 } }">
+<div class="zoomwindow">
+  <nav class="navbar navbar-default navbar-static-top">
+    <div class="container-fluid">
 
-    </div>
-    <div class="col-sm-2">
-      <ul class="nav nav-stacked">
-        <li><a href="#" zw-permalink="zw.data">
-            <span class="glyphicon glyphicon-link"></span>Share</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-new-window"></span>nBLAST</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-new-window"></span>pBLAST</a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-1">
-      <label>Phase</label>
-    </div>
-    <div class="col-sm-4">
-      <div class="btn-group btn-group-sm" role="group" aria-label="Phase">
-        <div class="btn-group">
+      <div class="navbar-header">
+        <span class="navbar-brand">{{zw.data.name}}</span>
+      </div>
+      <div class="navbar-form navbar-left">
+        <label>Phase</label>
+        <div class="btn-group btn-group-sm" role="group" aria-label="Phase">
           <button type="button" class="btn btn-default"
                   ng-model="zw.data.phase" uib-btn-radio="0">0</button>
-        </div>
-        <div class="btn-group">
           <button type="button" class="btn btn-default"
                   ng-model="zw.data.phase" uib-btn-radio="1">1</button>
-        </div>
-        <div class="btn-group">
           <button type="button" class="btn btn-default"
                   ng-model="zw.data.phase" uib-btn-radio="2">2</button>
         </div>
-      </div>
-    </div>
-    <div class="col-sm-1">
-      <label>Strand</label>
-    </div>
-    <div class="col-sm-4">
-      <div class="btn-group btn-group-sm" role="group" aria-label="Phase">
-        <div class="btn-group">
+        <label>Strand</label>
+        <div class="btn-group btn-group-sm" role="group" aria-label="Phase">
           <button type="button" class="btn btn-default"
                   ng-model="zw.data.complement" uib-btn-radio="0">Direct</button>
-        </div>
-        <div class="btn-group">
           <button type="button" class="btn btn-default"
                   ng-model="zw.data.complement" uib-btn-radio="1">Complement</button>
         </div>
+        <label>Bases</label>
+        <div class="form-group">
+          <input class="form-control" type="number" name="startBase" style="width:6em;"
+                 min="0" max="{{gc.length}}"
+                 ng-model="zw.data.start"
+                 ng-model-options="{ updateOn: 'default blur', debounce: { 'default': 600, 'blur': 0 } }">
+          <span class="small">to</span>
+          <input class="form-control" type="number" name="endBase" style="width:6em;"
+                 min="0" max="{{gc.length}}"
+                 ng-model="zw.data.end"
+                 ng-model-options="{ updateOn: 'default blur', debounce: { 'default': 600, 'blur': 0 } }">
+        </div>
+      </div>
+      <div class="navbar-right">
+        <ul class="nav nav-stacked">
+          <li><a href="#" zw-permalink="zw.data">
+            <span class="glyphicon glyphicon-link"></span>Share</a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-new-window"></span>nBLAST</a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-new-window"></span>pBLAST</a></li>
+        </ul>
       </div>
     </div>
-  </div>
-  <div class="row graph-row">
-    <div class="col-sm-12" style="padding: 20px; border: 1px dotted #333; height:120px;">
-      The graph will go here
+  </nav>
+  <div class="container-fluid">
+    <div class="row"></div>
+    <div class="row graph-row">
+      <div class="col-sm-12" style="padding: 20px; border: 1px dotted #333; height:120px;">
+        The graph will go here
+      </div>
     </div>
+    <div class="row protein-row">
+      <div class="col-sm-1" style="color: #ccc;">outside of gene left</div>
+      <div class="col-sm-10" style="padding: 20px;">The Protein translation here</div>
+      <div class="col-sm-1" style="color: #ccc;">outside of gene right</div>  </div>
   </div>
-  <div class="row protein-row">
-    <div class="col-sm-1" style="color: #ccc;">outside of gene left</div>
-    <div class="col-sm-10" style="padding: 20px;">The Protein translation here</div>
-    <div class="col-sm-1" style="color: #ccc;">outside of gene right</div>  </div>
 </div>
