Work towards the graph being usable outside of graphcontainer
I made some good progress but there's still a bunch of logic about
dealing with height and width that isn't ported over.

I think we need to split graph-container out into either two directives
or a directive+service. The logic for window resize, graphrow height
calculation, visiblity management all has slightly different
requirements

re #986 (4)

--- a/npactflask/npactflask/static/js/graphs/graph-container.html
+++ b/npactflask/npactflask/static/js/graphs/graph-container.html
@@ -1,10 +1,12 @@
 <div>
   <div ng-repeat="spec in graphSpecs track by $index"
-       id="graph_{{$index}}"
        class="graph">
     <div npact-graph
-         idx="{{$index}}"
-         start-base="{{spec}}"
+         id="graph_{{$index}}"
+         start-base="spec"
+         end-base="spec + gc.basesPerGraph"
+         visible="visible($index)"
+         graph-options="baseOpts"
          style="height:{{graphHeight}}px;">
     </div>
   </div>
