Fixing directive names with UI bootstrap upgrade
they now all want the `uib` prefix.

--- a/npactflask/npactflask/static/js/graphs/config.html
+++ b/npactflask/npactflask/static/js/graphs/config.html
@@ -1,6 +1,6 @@
 <div id="config" ng-controller="TooltipCtrl">
   <form name="configForm">
-    <h2 style="font-size: 24px;">Graph Controls <span tooltip-template="'helpTool'" tooltip-placement="right" tooltip-class="customClass" tooltip-append-to-body="true" class="glyphicon glyphicon-question-sign" style="float: right; cursor: pointer"></span></h2>
+    <h2 style="font-size: 24px;">Graph Controls <span uib-tooltip-template="'helpTool'" tooltip-placement="right" tooltip-class="customClass" tooltip-append-to-body="true" class="glyphicon glyphicon-question-sign" style="float: right; cursor: pointer"></span></h2>
 
     <script type="text/ng-template" id="helpTool"><p>To pan left or right you can either use the <b>left and right arrow keys</b> or <b>click and drag</b> on graph</p><p><b>Double click</b> on a graph to zoom into that point. Hold <b>shift and double click</b> on a graph to zoom out.</p>
     </script>
