--- a/npactflask/npactflask/static/js/graphs/page.html
+++ b/npactflask/npactflask/static/js/graphs/page.html
@@ -24,13 +24,13 @@
     <npact-msg-pane></npact-msg-pane>
   </div>
   <div id="results" ng-controller="Results">
-    <accordion close-others="false">
-      <accordion-group is-open="status.open">
-        <accordion-heading>
+    <uib-accordion close-others="false">
+      <uib-accordion-group is-open="status.open">
+        <uib-accordion-heading>
           <span>
             Downloads<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
           </span>
-        </accordion-heading>
+        </uib-accordion-heading>
         <div id="downloads" ng-controller="DownloadsCtrl as dc">
           <div class="" >
             <p>
@@ -49,15 +49,15 @@
             </div>
           </div>
         </div>
-      </accordion-group>
-      <accordion-group is-open="status.isFirstOpen">
-        <accordion-heading>
+      </uib-accordion-group>
+      <uib-accordion-group is-open="status.isFirstOpen">
+        <uib-accordion-heading>
           <span>
             Graphs<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.isFirstOpen, 'glyphicon-chevron-right': !status.isFirstOpen}"></i>
           </span>
-        </accordion-heading>
+        </uib-accordion-heading>
         <div npact-graph-container id="graphcontainer"></div>
-      </accordion-group>
-    </accordion>
+      </uib-accordion-group>
+    </uib-accordion>
   </div>
 </div>
