Mostly working version of mycoplasma with new tracks

--- a/npactflask/npactflask/static/js/graphs/config.html
+++ b/npactflask/npactflask/static/js/graphs/config.html
@@ -73,7 +73,7 @@
 
       <h3>Tracks</h3>
       <div>
-        <div ng-repeat="t in gc.tracks track by t.name">
+        <div ng-repeat="t in gc.tracks track by t.filename">
           <label class="track-label"><input ng-model="t.active" type="checkbox" /> {{t.name}}</label>
         </div>
       </div>
