--- a/npactflask/npactflask/static/js/graphs/config.html
+++ b/npactflask/npactflask/static/js/graphs/config.html
@@ -74,7 +74,7 @@
       <h3>Tracks</h3>
       <div>
         <div ng-repeat="t in gc.tracks track by t.filename">
-          <label class="track-label"><input ng-model="t.active" type="checkbox" /> {{t.name}}</label>
+          <label class="track-label" title="{{t.filename}}"><input ng-model="t.active" type="checkbox" /> {{t.name}}</label>&nbsp;<small>{{t.id()}}</small>
         </div>
       </div>
 
