--- a/npactflask/npactflask/static/js/graphs/zoomwindow.html
+++ b/npactflask/npactflask/static/js/graphs/zoomwindow.html
@@ -3,7 +3,8 @@
     <div class="container-fluid">
 
       <div class="navbar-header">
-        <span class="navbar-brand">{{zw.data.name}}</span>
+        <span class="navbar-brand" contenteditable>{{zw.data.name}}</span> <br>
+        on <span contenteditable> {{zw.data.track.name}}
       </div>
       <div class="navbar-form navbar-left">
         <label>Phase</label>
