Make `span[contenteditable]` change the cursor
This helps provide a visual cue that the area is editable.

--- a/npactflask/npactflask/static/js/graphs/page.html
+++ b/npactflask/npactflask/static/js/graphs/page.html
@@ -13,7 +13,7 @@
              title="Have the server generate a PDF for printing (this takes a minute)."
              class="btn md-text btn-form">Request PDF</a>&nbsp;
   </div>
-  <h2 ng-model="gc.first_page_title" contenteditable strip-br="true"></h2>
+  <h2><span ng-model="gc.first_page_title" contenteditable strip-br="true"></span></h2>
   <div id="status">
     <h3> Status
       <!-- This isn't working right now
