--- a/npactflask/npactflask/static/js/graphs/zoomwindow.html
+++ b/npactflask/npactflask/static/js/graphs/zoomwindow.html
@@ -3,8 +3,8 @@
     <div class="container-fluid">
 
       <div class="navbar-header">
-        <span class="navbar-brand" contenteditable>{{zw.data.name}}</span> <br>
-        on <span contenteditable> {{zw.data.track.name}}
+        <span class="navbar-brand" contenteditable ng-model="zw.data.name"></span> <br>
+        on <span contenteditable ng-model="zw.data.track.name">
       </div>
       <div class="navbar-form navbar-left">
         <label>Phase</label>
