Fix `contenteditable` to not stomp initial value
The read during first link was trying to read the html value out before
it was set. this used to work but doesn't now; cool.

--- a/npactflask/npactflask/static/js/graphs/zoomwindow.html
+++ b/npactflask/npactflask/static/js/graphs/zoomwindow.html
@@ -3,8 +3,8 @@
     <div class="container-fluid">
 
       <div class="navbar-header">
-        <span class="navbar-brand" contenteditable ng-model="zw.item.name"></span> <br>
-        on <span contenteditable ng-model="zw.track.name">
+        <span class="navbar-brand" contenteditable ng-model="zw.item.name" strip-brs="true"></span> <br>
+        on <span contenteditable ng-model="zw.track.name" strip-brs="true"></span>
       </div>
       <div class="navbar-form navbar-left">
         <label>Phase</label>
