First draft of downloading a new GBK of visible tracks
re Programming:#985 (1)

--- a/npactflask/npactflask/static/js/graphs/page.html
+++ b/npactflask/npactflask/static/js/graphs/page.html
@@ -49,7 +49,7 @@
             </ul>
             <p><a lazy-href="dc.buildGBKDownload()"
                   title="Save all currently active track ORFs as features in a GBK file"
-               >All tracks in a GBK</a></p>
+               >All Visible Tracks in a GBK</a></p>
             <div ng-show="predictionFiles.length > 0">
               <h4 id="downloads-predictions">Prediction output files: </h4>
               <ul id="prediction-files">
