Zoom window linking
 * save, & cancel buttons work
 * TODO: delete needs some work
 * Auto update url / share link with zoom info
 * cdsidx is always on tracks
 * saving a track ensures that the page will reload the saved track
 * TODO: when reloading we end up with the original track plus any
   edited ones, which makes it appear that we are always adding new
   modified tracks

re Programming:#985 (3)

--- a/npactflask/npactflask/static/js/graphs/zoomwindow.html
+++ b/npactflask/npactflask/static/js/graphs/zoomwindow.html
@@ -36,6 +36,16 @@
           <li><a href="#"><span class="glyphicon glyphicon-new-window"></span>pBLAST</a></li>
         </ul>
       </div>
+      <div class="persist buttons">
+        <button ng-click="zw.save(zw.track)"> Save </button>
+        <button confirmed-click="zw.cancel()"
+                np-confirm-click="Are you sure you want to discard your changes?">
+          Cancel </button>
+        <button confirmed-click="zw.delete(zw.item, zw.track)"
+                np-confirm-click="Are you sure you wish to remove this ORF/CDS">
+          Delete </button>
+      </div>
+      <div class="clearer"></div>
     </div>
   </nav>
   <div class="container-fluid">
