Trying to make delete work sensibly
 * reindex cdsidx on orfs when adding / removing from a track
 * remove zoom params when closing the modal
 * track tracks by filename in repeat
 * redraw and dismiss the zoomwindow when we save

re Programming:#985 (1)

--- a/npactflask/npactflask/static/js/graphs/page.html
+++ b/npactflask/npactflask/static/js/graphs/page.html
@@ -43,7 +43,7 @@
               Original GBK: {{GraphConfig.filename}}</a></p>
             <h4 id="downloads-tracks">Tracks</h4>
             <ul >
-              <li ng-repeat="tr in GraphConfig.tracks">
+              <li ng-repeat="tr in GraphConfig.tracks track by tr.filename">
                 <a href="{{FETCH_BASE_URL}}{{tr.filename}}">{{tr.name}}</a>
               </li>
             </ul>
